--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   },
   "dependencies": {
     "eslint-plugin-jest": "^21.24.1",
-    "express": "^4.16.4",
-    "jest": "^23.6.0",
-    "supertest": "^3.3.0"
+    "jest": "^23.6.0"
   }
 }
